Responsive Tailwind Added

--- a/sections/dev__rich-text.liquid
+++ b/sections/dev__rich-text.liquid
@@ -61,7 +61,7 @@
           "type": "textarea",
           "id": "tailwindheader",
           "label": "Style Header Container",
-          "default": "text-2xl font-bold text-gray-900 px-3 py-2"
+          "default": "text-2xl font-bold text-gray-900 px-3 py-2 capitalize"
         }
       ]
     },
@@ -84,7 +84,7 @@
           "type": "textarea",
           "id": "tailwindtext",
           "label": "Style Text Container",
-          "default": "text-xl text-gray-700 px-3 py-2"
+          "default": "text-base md:text-xl text-gray-700 px-3 py-2"
         }
       ]
     },
@@ -112,7 +112,7 @@
           "type": "textarea",
           "id": "tailwindbutton",
           "label": "Style Button Container",
-          "default": "inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-gray-700 rounded-lg hover:bg-gray-900"
+          "default": "inline-flex items-center mt-2 px-3 py-2 text-xs md:text-sm font-medium text-center text-white bg-gray-700 rounded-lg hover:bg-gray-900"
         }
       ]
     }
