--- a/sections/dev__cards.liquid
+++ b/sections/dev__cards.liquid
@@ -75,7 +75,7 @@
       "type": "number",
       "id": "image_height",
       "label": "Image Height",
-      "default": 200
+      "default": 400
     },
     {
       "type": "textarea",
@@ -87,7 +87,7 @@
       "type": "textarea",
       "label": "Card Section Title Styles",
       "id": "card_section_title_styles",
-      "default": "text-center text-3xl font-bold text-gray-900"
+      "default": "text-center text-2xl md:text-3xl font-bold text-gray-900"
     },
     {
       "type": "textarea",
@@ -111,31 +111,31 @@
       "type": "textarea",
       "id": "card_image_styles",
       "label": "Card Image Styles",
-      "default": "rounded-t-lg"
+      "default": "rounded-t-lg object-cover w-full h-[150px] md:h-[200px]"
     },
     {
       "type": "textarea",
       "label": "Card Content Styles",
       "id": "card_content_styles",
-      "default": "p-5"
+      "default": "px-4 py-3 md:p-5"
     },
     {
       "type": "textarea",
       "label": "Card Details Styles",
       "id": "card_details_styles",
-      "default": "mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
+      "default": "mb-2 text-lg md:text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
     },
     {
       "type": "textarea",
       "label": "Card Subdetails Styles",
       "id": "card_subdetails_styles",
-      "default": "mb-3 font-normal text-gray-700 dark:text-gray-400"
+      "default": "text-sm md:text-base mb-3 font-normal text-gray-700 dark:text-gray-400"
     },
     {
       "type": "textarea",
       "label": "Card Button Styles",
       "id": "card_button_styles",
-      "default": "inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+      "default": "inline-flex items-center px-2 py-1 md:px-3 md:py-2 text-xs md:text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
     },
     {
       "type": "textarea",
