--- a/sections/dev__newsletter.liquid
+++ b/sections/dev__newsletter.liquid
@@ -103,13 +103,13 @@
       "type": "textarea",
       "id": "title_styles",
       "label": "Title Styles",
-      "default": "mb-4 text-3xl tracking-tight font-bold text-gray-900 sm:text-4xl dark:text-white text-center"
+      "default": "mb-4 text-2xl md:text-3xl tracking-tight font-semibold text-gray-900 sm:text-4xl dark:text-white text-center"
     },
     {
       "type": "textarea",
       "id": "subtitle_styles",
       "label": "Subtitle Styles",
-      "default": "mx-auto mb-8 max-w-2xl font-light text-gray-500 md:mb-12 sm:text-xl dark:text-gray-400"
+      "default": "mx-auto mb-8 max-w-2xl font-light text-gray-500 md:mb-12 text-sm md:text-lg dark:text-gray-400 text-center"
     },
     {
       "type": "textarea",
@@ -133,7 +133,7 @@
       "type": "textarea",
       "id": "input_styles",
       "label": "Input Styles",
-      "default": "block p-3 pl-10 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:rounded-none sm:rounded-l-lg focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+      "default": "block p-2 md:p-3 pl-10 md:pl-10 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:rounded-none sm:rounded-l-lg focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
     },
     {
       "type": "textarea",
@@ -144,13 +144,13 @@
       "type": "textarea",
       "id": "button_styles",
       "label": "Button Styles",
-      "default": "py-3 px-5 w-full text-sm font-medium text-center bg-blue-600 text-white rounded-lg border cursor-pointer bg-primary-700 border-primary-600 sm:rounded-none sm:rounded-r-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+      "default": "py-1 px-2 block mx-auto md:py-3 md:px-5 md:w-full text-sm font-medium text-center bg-blue-600 text-white rounded-lg border cursor-pointer bg-primary-700 border-primary-600 sm:rounded-none sm:rounded-r-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
     },
     {
       "type": "textarea",
       "id": "privacy_policy_styles",
       "label": "Privacy Policy Styles",
-      "default": "mx-auto max-w-screen-sm text-sm text-gray-500 newsletter-form-footer dark:text-gray-300 text-center"
+      "default": "mx-auto max-w-screen-sm text-xs md:text-sm text-gray-500 newsletter-form-footer dark:text-gray-300 text-center"
     }
   ],
   "presets": [
