--- a/sections/dev__timeline.liquid
+++ b/sections/dev__timeline.liquid
@@ -1,38 +1,27 @@
-<ol class="timeline__main {{ section.settings.timeline__main }}">
+<div class="{{ section.settings.timeline__section }}">
   {% for block in section.blocks %}
-    <li class="timeline__main_list {{ block.settings.timeline__main_list }}">
-      <div
-        class="timeline__main_line {{ block.settings.timeline__main_line }}"
-      ></div>
-      <time class="timeline__main_time mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
-        >February 2022</time
-      >
-      <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Application UI code in Tailwind CSS</h3>
-      <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-        Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order
-        E-commerce & Marketing pages.
-      </p>
-      <a
-        href="#"
-        class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
-        >Learn more
-        <svg
-          class="w-3 h-3 ms-2 rtl:rotate-180"
-          aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 14 10"
-        >
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-        </svg>
-      </a>
-    </li>
+    <ol class="timeline__main {{ section.settings.timeline__main }}">
+      <li class="timeline__main_list_style {{ block.settings.timeline__main_list_style }}">
+        <div
+          class="timeline__main_line_style {{ block.settings.timeline__main_line_style }}"
+        ></div>
+        <time class="timeline__main_time_style {{ block.settings.timeline__main_time_style }}">
+          {{- block.settings.timeline__main_time -}}
+        </time>
+        <h3 class="timeline__main_title_style {{ block.settings.timeline__main_title_style }}">
+          {{ block.settings.timeline__main_title }}
+        </h3>
+        <p class="timeline__main_subtitle_style {{ block.settings.timeline__main_subtitle_style }}">
+          {{ block.settings.timeline__main_subtitle }}
+        </p>
+      </li>
+    </ol>
   {% endfor %}
-</ol>
+</div>
 
 {% schema %}
 {
-  "name": "Card Display",
+  "name": "Timeline Display",
   "settings": [
     {
       "type": "header",
@@ -40,38 +29,74 @@
     },
     {
       "type": "textarea",
-      "id": "timeline__main",
+      "id": "timeline__section",
       "label": "Main Section Styling",
-      "default": "relative border-s border-gray-200 dark:border-gray-700"
+      "default": "bg-blue-100 p-4"
     }
   ],
   "blocks": [
     {
       "type": "timeline_block",
-      "name": "Add Timeline",
+      "name": "Timeline",
       "settings": [
+        {
+          "type": "textarea",
+          "id": "timeline__main_time",
+          "label": "Time",
+          "default": "August 2023"
+        },
+        {
+          "type": "textarea",
+          "id": "timeline__main_title",
+          "label": "Title",
+          "default": "Application UI code in Tailwind CSS"
+        },
+        {
+          "type": "textarea",
+          "id": "timeline__main_subtitle",
+          "label": "Sub title",
+          "default": "Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages."
+        },
         {
           "type": "header",
           "content": "Tailwind Styling Classes"
         },
         {
           "type": "textarea",
-          "id": "timeline__main_list",
-          "label": "Main Section List Styling",
+          "id": "timeline__main",
+          "label": "Main Section Styling",
+          "default": "relative border-s border-gray-200 dark:border-gray-700"
+        },
+        {
+          "type": "textarea",
+          "id": "timeline__main_list_style",
+          "label": "List Styling",
           "default": "mb-10 ms-4"
         },
         {
           "type": "textarea",
-          "id": "timeline__main_line",
-          "label": "Main Section Line Styling",
-          "default": "absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+          "id": "timeline__main_line_style",
+          "label": "Line Styling",
+          "default": "m-3 absolute w-3  h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-gray-900 bg-gray-700"
         },
         {
-            "type": "textarea",
-            "id": "timeline__main_line",
-            "label": "Main Section Line Styling",
-            "default": "absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
-          }
+          "type": "textarea",
+          "id": "timeline__main_time_style",
+          "label": "Time Styling",
+          "default": "mb-1 text-sm font-normal leading-none text-gray-600"
+        },
+        {
+          "type": "textarea",
+          "id": "timeline__main_title_style",
+          "label": "Title Styling",
+          "default": "text-lg font-semibold text-gray-900"
+        },
+        {
+          "type": "textarea",
+          "id": "timeline__main_subtitle_style",
+          "label": "Subtitle Styling",
+          "default": "mb-4 text-base font-normal text-gray-600"
+        }
       ]
     }
   ],
