--- a/sections/dev__timeline.liquid
+++ b/sections/dev__timeline.liquid
@@ -1,22 +1,24 @@
-<div class="{{ section.settings.timeline__section }}">
-  {% for block in section.blocks %}
-    <ol class="timeline__main {{ section.settings.timeline__main }}">
-      <li class="timeline__main_list_style {{ block.settings.timeline__main_list_style }}">
-        <div
-          class="timeline__main_line_style {{ block.settings.timeline__main_line_style }}"
-        ></div>
-        <time class="timeline__main_time_style {{ block.settings.timeline__main_time_style }}">
-          {{- block.settings.timeline__main_time -}}
-        </time>
-        <h3 class="timeline__main_title_style {{ block.settings.timeline__main_title_style }}">
-          {{ block.settings.timeline__main_title }}
-        </h3>
-        <p class="timeline__main_subtitle_style {{ block.settings.timeline__main_subtitle_style }}">
-          {{ block.settings.timeline__main_subtitle }}
-        </p>
-      </li>
-    </ol>
-  {% endfor %}
+<div class="{{ section.settings.timeline__main_section }}">
+  <div class="{{ section.settings.timeline__section }}">
+    {% for block in section.blocks %}
+      <ol>
+        <li class="timeline__main_list_style {{ block.settings.timeline__main_list_style }}">
+          <div
+            class="timeline__main_line_style {{ block.settings.timeline__main_line_style }}"
+          ></div>
+          <time class="timeline__main_time_style {{ block.settings.timeline__main_time_style }}">
+            {{- block.settings.timeline__main_time -}}
+          </time>
+          <h3 class="timeline__main_title_style {{ block.settings.timeline__main_title_style }}">
+            {{ block.settings.timeline__main_title }}
+          </h3>
+          <p class="timeline__main_subtitle_style {{ block.settings.timeline__main_subtitle_style }}">
+            {{ block.settings.timeline__main_subtitle }}
+          </p>
+        </li>
+      </ol>
+    {% endfor %}
+  </div>
 </div>
 
 {% schema %}
@@ -29,9 +31,15 @@
     },
     {
       "type": "textarea",
-      "id": "timeline__section",
+      "id": "timeline__main_section",
       "label": "Main Section Styling",
       "default": "bg-blue-100 p-4"
+    },
+    {
+      "type": "textarea",
+      "id": "timeline__section",
+      "label": "Section Styling",
+      "default": "bg-blue-100 p-4 relative border-s border-gray-200 dark:border-gray-700"
     }
   ],
   "blocks": [
@@ -63,12 +71,6 @@
         },
         {
           "type": "textarea",
-          "id": "timeline__main",
-          "label": "Main Section Styling",
-          "default": "relative border-s border-gray-200 dark:border-gray-700"
-        },
-        {
-          "type": "textarea",
           "id": "timeline__main_list_style",
           "label": "List Styling",
           "default": "mb-10 ms-4"
@@ -77,7 +79,7 @@
           "type": "textarea",
           "id": "timeline__main_line_style",
           "label": "Line Styling",
-          "default": "m-3 absolute w-3  h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-gray-900 bg-gray-700"
+          "default": "absolute w-3  h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-gray-900 bg-gray-700"
         },
         {
           "type": "textarea",
