Moved into block scope

--- a/sections/dev__carousel--two-rows.liquid
+++ b/sections/dev__carousel--two-rows.liquid
@@ -3,9 +3,15 @@
   <!-- Carousel Text -->
   <div class="carousel__text {{ section.settings.carousel__text }}">
     <h2 class="carousel__heading {{ section.settings.carousel__heading }}">{{ section.settings.heading_text }}</h2>
-    <p class="carousel__subheading {{ section.settings.carousel__subheading }}">{{ section.settings.subheading_text }}</p>
+    <p class="carousel__subheading {{ section.settings.carousel__subheading }}">
+      {{ section.settings.subheading_text }}
+    </p>
     <div class="carousel__cta-container {{ section.settings.carousel__cta-container }}">
-      <a href="{{ section.settings.cta_url }}" class="carousel__cta-link {{ section.settings.carousel__cta-link }}" target="_blank">
+      <a
+        href="{{ section.settings.cta_url }}"
+        class="carousel__cta-link {{ section.settings.carousel__cta-link }}"
+        target="_blank"
+      >
         {{- section.settings.cta_text -}}
       </a>
     </div>
@@ -15,50 +21,66 @@
   {%- assign image_url_width = section.settings.image_url_width -%}
   {%- assign image_url_height = section.settings.image_url_height -%}
   <div class="carousel__row {{ section.settings.carousel__row }}">
-    <div class="carousel__row_upper {{ block.settings.carousel__row_upper }}">
     {% for block in section.blocks %}
       {% if block.type == 'upper-image' %}
-        {%- assign carousel__image_style = "carousel__image " | append: section.settings.carousel__image -%}
-        <div class="carousel__upper-cell  {{ block.settings.carousel__upper-cell }}">
+        <div class="carousel__row_upper {{ block.settings.carousel__row_upper }}">
+          {%- assign carousel__image_style = 'carousel__image ' | append: section.settings.carousel__image -%}
+          <div class="carousel__upper-cell  {{ block.settings.carousel__upper-cell }}">
             {% if block.settings.image %}
-              {{ block.settings.image | image_url: width: image_url_width, height: image_url_height | image_tag: class: carousel__image_style }}
+              {{
+                block.settings.image
+                | image_url: width: image_url_width, height: image_url_height
+                | image_tag: class: carousel__image_style
+              }}
             {% else %}
               {{ 'image' | placeholder_svg_tag }}
             {% endif %}
+          </div>
         </div>
       {% endif %}
     {% endfor %}
-    </div>
   </div>
 
   <!-- Lower Row Carousel -->
   <div class="carousel__row {{ section.settings.carousel__row }}">
-    <div class="carousel__row_lower {{ block.settings.carousel__row_lower }}">
     {% for block in section.blocks %}
       {% if block.type == 'lower-image' %}
-        {%- assign carousel__image_style = "carousel__image " | append: section.settings.carousel__image -%}
-        <div class="carousel__lower-cell  {{ block.settings.carousel__lower-cell }}">
+        <div class="carousel__row_lower {{ block.settings.carousel__row_lower }}">
+          {%- assign carousel__image_style = 'carousel__image ' | append: section.settings.carousel__image -%}
+          <div class="carousel__lower-cell  {{ block.settings.carousel__lower-cell }}">
             {% if block.settings.image %}
-              {{ block.settings.image | image_url: width: image_url_width, height: image_url_height | image_tag: class: carousel__image_style }}
+              {{
+                block.settings.image
+                | image_url: width: image_url_width, height: image_url_height
+                | image_tag: class: carousel__image_style
+              }}
             {% else %}
               {{ 'image' | placeholder_svg_tag }}
             {% endif %}
+          </div>
         </div>
       {% endif %}
     {% endfor %}
-    </div>
   </div>
 </div>
 
 <style>
   @keyframes slide-left {
-    from { transform: translateX(100%); }
-    to { transform: translateX(-100%); }
+    from {
+      transform: translateX(100%);
+    }
+    to {
+      transform: translateX(-100%);
+    }
   }
-  
+
   @keyframes slide-right {
-    from { transform: translateX(-100%); }
-    to { transform: translateX(100%); }
+    from {
+      transform: translateX(-100%);
+    }
+    to {
+      transform: translateX(100%);
+    }
   }
 </style>
 
