Changing Styling type from 'text' to 'textarea'

--- a/sections/dev__collapsible-content.liquid
+++ b/sections/dev__collapsible-content.liquid
@@ -77,31 +77,31 @@
       "info": "Note: Insert classes with space between them."
     },
     {
-      "type": "text",
+      "type": "textarea",
       "label": "Main Container",
       "id": "main_container",
       "default": "max-w-screen-xl mx-auto px-5 bg-white"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "label": "Main Content Container",
       "id": "main_content_container",
       "default": "flex flex-col items-center"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "label": "Collapsible Main Heading",
       "id": "collapsible_main_heading",
       "default": "font-bold text-2xl md:text-5xl mt-5 tracking-tight"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "label": "Collapsible Sub Heading",
       "id": "collapsible_sub_heading",
       "default": "text-neutral-500 text-lg md:text-xl mt-3"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "label": "Collapsible Grid",
       "id": "collapsible_grid",
       "default": "grid divide-y divide-neutral-200 max-w-xl mx-auto mt-8"
@@ -130,36 +130,36 @@
           "info": "Note: Insert classes with space between them."
         },
         {
-          "type": "text",
+          "type": "textarea",
           "label": "Collapsible Block Container",
           "id": "collapsible_block_container",
           "default": "py-5"
         },
         {
-          "type": "text",
+          "type": "textarea",
           "label": "Collapsible Details",
           "id": "collapsible_details",
           "default": "group"
         },
         {
-          "type": "text",
+          "type": "textarea",
           "label": "Collapsible Summary",
           "id": "collapsible_summary",
           "default": "flex justify-between items-center font-medium cursor-pointer list-none"
         },
         {
-          "type": "text",
+          "type": "textarea",
           "label": "Collapsible Title",
           "id": "collapsible_title"
         },
         {
-          "type": "text",
+          "type": "textarea",
           "label": "Collapsible Icon",
           "id": "collapsible_icon",
           "default": "transition group-open:rotate-180"
         },
         {
-          "type": "text",
+          "type": "textarea",
           "label": "Collapsible Content",
           "id": "collapsible_content",
           "default": "text-neutral-600 mt-3 group-open:animate-fadeIn"
