--- a/sections/dev__contact-form.liquid
+++ b/sections/dev__contact-form.liquid
@@ -84,49 +84,49 @@
       "content": "Tailwind Styling Classes"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "contact",
       "label": "Style Contact Section",
       "default": "w-full bg-gray-100 py-10 text-center mx-auto"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "contact__style--title",
       "label": "Style Contact Header",
       "default": "text-2xl md:text-3xl text-gray-800 font-semibold"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "contact__style--form",
       "label": "Style Contact Form",
       "default": "mt-5 md:mt-7 w-full mx-auto px-6 md:w-3/5"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "contact__form_styles",
       "label": "Style Contact Form Inner Container",
       "default": "flex flex-col items-center"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "contact__1st-row",
       "label": "Style Contact 1st Row",
       "default": "flex justify-between gap-2 w-full"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "contact__style--input",
       "label": "Style Contact Input",
       "default": "w-full px-2 py-1 text-sm md:text-base"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "contact__style--textarea",
       "label": "Style Contact Textarea",
       "default": "w-full px-2 py-1 text-sm md:text-base"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "contact__submit-button",
       "label": "Style Submit Button",
       "default": "bg-purple-900 text-white py-1 md:py-2 px-4 rounded mt-4 cursor-pointer w-full text-sm md:text-base hover:bg-purple-800"
