--- a/sections/dev__modal.liquid
+++ b/sections/dev__modal.liquid
@@ -90,25 +90,25 @@
       "content": "Tailwind Styling Classes"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "label": "Style Modal",
       "id": "style_modal",
       "default": "w-[80%] md:w-[40%] bg-white px-[20px] pt-[18px] pb-[12px] md:px-[40px] md:py-[20px] rounded-[10px] shadow-lg top-[25%]"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "label": "Style Modal Heading",
       "id": "style_modal_header",
       "default": "text-sm md:text-xl font-semibold mb-2 md:mb-4 break-normal"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "label": "Style Modal Content",
       "id": "style_modal_content",
       "default": "mb-2 md:mb-6 text-xs md:text-base break-normal"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "style_modal_button",
       "label": "Style Modal Button",
       "default": "bg-purple-900 text-white px-2 py-1 md:px-4 md:py-1 rounded-full text-xs md:text-base hover:bg-purple-600 hover:text-slate-200"
