--- a/sections/dev__multi-column.liquid
+++ b/sections/dev__multi-column.liquid
@@ -1,4 +1,4 @@
-<!-- dev__multi-column.liquid -->
+area<!-- dev__multi-column.liquid -->
 
 {%- style -%}
   .multi-column__item {
@@ -67,49 +67,49 @@
       "content": "Tailwind Styling Classes"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "multi-column",
       "label": "Style Section",
       "default": "w-[90%] mt-5 md:mt-10 mx-auto"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "multi-column__section-title",
       "label": "Style Section Header",
       "default": "md:pb-4 text-2xl md:text-3xl font-semibold"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "multi-column__container",
       "label": "Style Multi-Column Container",
       "default": "mt-7 md:mt-5 flex flex-col gap-5 md:gap-10 md:flex-row"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "multi-column__item",
       "label": "Style Multi-Column Item",
       "default": "w-full md:w-[30%] px-2.5 py-2.5 md:px-3.5 md:py-3.5 rounded-[15px] md:rounded-[20px] bg-[#ebe7e7]"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "multi-column__item-img",
       "label": "Style Column Item Image",
       "default": "w-full h-[150px] md:h-[200px] overflow-hidden rounded-[10px]"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "multi-column__item-title",
       "label": "Style Column Title",
       "default": "text-lg md:text-xl mt-2.5 font-medium break-normal"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "multi-column__item-content",
       "label": "Style Column Content",
       "default": "text-sm md:text-base font-light break-normal"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "multi-column__item-link",
       "label": "Style Column Link",
       "default": "text-sm md:text-base font-normal cursor-pointer text-blue-900 hover:text-blue-600 hover:underline"
