additional files changes

--- a/sections/dev__image-banner.liquid
+++ b/sections/dev__image-banner.liquid
@@ -64,7 +64,7 @@
       "default": "800"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "image_tag_styles",
       "label": "Image Tag Style",
       "default": "h-[500px] object-cover"
@@ -74,37 +74,37 @@
       "content": "Styling"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "image-banner",
       "label": "Style Section",
       "default": "flex-col w-[75%] mt-5 md:mt-10 md:flex-row mx-auto flex items-center justify-between"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "image-banner__text-wrapper",
       "label": "Text Wrapper Style Section",
       "default": "flex-basis-1/2 p-4 md:flex-basis-full"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "image-banner__title",
       "label": "Text Title Style Section",
       "default": "text-red-300 text-2xl font-bold md:flex-basis-full"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "image-banner__description",
       "label": "Text Description Style Section",
       "default": "mb-4"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "image-banner__buttons",
       "label": "Text Buttons Style Section",
       "default": "flex flex-wrap gap-4 mb-4"
     },
     {
-      "type": "text",
+      "type": "textarea",
       "id": "image-banner__button",
       "label": "Text Single Button Style Section",
       "default": "px-6 py-2 border border-solid rounded text-white no-underline inline-block bg-black color-white"
