--- a/sections/dev__image-text.liquid
+++ b/sections/dev__image-text.liquid
@@ -71,46 +71,46 @@
       "content": "Styling"
     },
     {
-      "type":"text",
-      "id":"banner-template",
-      "label":"Banner Template Style",
-      "default":"relative w-full max-w-1200 mx-auto"
+      "type": "textarea",
+      "id": "banner-template",
+      "label": "Banner Template Style",
+      "default": "relative w-full max-w-1200 mx-auto"
     },
     {
-      "type":"text",
-      "id":"image-banner",
-      "label":"Image Text Entire Style",
-      "default":"flex relative overflow-hidden max-md:flex-col"
+      "type": "textarea",
+      "id": "image-banner",
+      "label": "Image Text Entire Style",
+      "default": "flex relative overflow-hidden max-md:flex-col"
     },
     {
-      "type":"text",
-      "id":"image-banner-content",
-      "label":"Image Content Style",
-      "default":"p-16 mt-16 flex-1 bg-white bg-opacity-80 z-10 max-md:p-2.5 max-md:flex-col max-md:w-full max-md:mt-4"
+      "type": "textarea",
+      "id": "image-banner-content",
+      "label": "Image Content Style",
+      "default": "p-16 mt-16 flex-1 bg-white bg-opacity-80 z-10 max-md:p-2.5 max-md:flex-col max-md:w-full max-md:mt-4"
     },
     {
-      "type":"text",
-      "id":"image-banner-small-title",
-      "label":"Small Title Style",
-      "default":"text-2xl text-red-500 mb-4 max-md:mb-2"
+      "type": "textarea",
+      "id": "image-banner-small-title",
+      "label": "Small Title Style",
+      "default": "text-2xl text-red-500 mb-4 max-md:mb-2"
     },
     {
-      "type":"text",
-      "id":"image-banner-title",
-      "label":"Title Style",
-      "default":"text-6xl text-gray-700 font-bold mb-10 max-md:text-4xl max-md:mb-2"
+      "type": "textarea",
+      "id": "image-banner-title",
+      "label": "Title Style",
+      "default": "text-6xl text-gray-700 font-bold mb-10 max-md:text-4xl max-md:mb-2"
     },
     {
-      "type":"text",
-      "id":"image-banner-description",
-      "label":"Description Style",
-      "default":"text-lg text-gray-600 mb-5"
+      "type": "textarea",
+      "id": "image-banner-description",
+      "label": "Description Style",
+      "default": "text-lg text-gray-600 mb-5"
     },
     {
-      "type":"text",
-      "id":"image-banner-image",
-      "label":"Image Style",
-      "default":"flex-1 w-full h-auto block"
+      "type": "textarea",
+      "id": "image-banner-image",
+      "label": "Image Style",
+      "default": "flex-1 w-full h-auto block"
     }
   ],
   "presets": [
