--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -80,14 +80,16 @@
       {{ 'accessibility.skip_to_text' | t }}
     </a>
 
-    {% comment %} {% sections 'header-group' %} {% endcomment %}
-    
-    {% section 'dev__announcement-bar' %}
-    {% section 'dev__header' %}
-
     {% if settings.initial_modal_enabled and template == 'index' %}
       {% section 'dev__modal' %}
     {% endif %}
+
+    {% comment %}
+      {% section 'dev__announcement-bar' %}
+      {% section 'dev__header' %}
+    {% endcomment %}
+
+    {% sections 'header-group' %}
 
     <main id="MainContent" class="content-for-layout focus-none" role="main">
       {{ content_for_layout }}
