--- a/sections/dev__video-text.liquid
+++ b/sections/dev__video-text.liquid
@@ -1,11 +1,11 @@
-<!-- video-text-section.liquid -->
+<!-- sections/dev__video-text.liquid -->
 
-<div class="video-text-container {{ section.settings.video_text_container }}">
+<div class="video-text-container {{ section.settings.video_text_container_styles }}">
   <!-- Video container -->
-  <div class="video-container {{ section.settings.video_container }}">
+  <div class="video-container {{ section.settings.video_container_styles }}">
 
     <video
-      class="video-container__video {{ section.settings.video_container_video }}"
+      class="video-container__video {{ section.settings.video_container_video_styles }}"
       controls
       autoplay
       loop>
@@ -14,23 +14,23 @@
   </div>
 
   <!-- Text container -->
-  <div class="text-container {{ section.settings.text_container }}">
+  <div class="text-container {{ section.settings.text_container_styles }}">
     {% for block in section.blocks %}
       {% case block.type %}
         {% when 'heading' %}
-          <h2 class="text-container__heading {{ section.settings.text_container_heading }}">
+          <h2 class="text-container__heading {{ section.settings.text_container_heading_styles }}">
             {{ block.settings.heading }}
           </h2>
         {% when 'sub_heading' %}
-          <h3 class="text-container__sub-heading {{ section.settings.text_container_sub_heading }}">
+          <h3 class="text-container__sub-heading {{ section.settings.text_container_sub_heading_styles }}">
             {{ block.settings.sub_heading }}
           </h3>
         {% when 'paragraph' %}
-          <p class="text-container__paragraph {{ section.settings.text_container_paragraph }}">
+          <p class="text-container__paragraph {{ section.settings.text_container_paragraph_styles }}">
             {{ block.settings.paragraph }}
           </p>
         {% when 'button' %}
-          <a href={{ block.settings.button_link }} class="text-container__button {{ section.settings.text_container_button }}">
+          <a href={{ block.settings.button_link }} class="text-container__button {{ section.settings.text_container_button_styles }}">
             {{ block.settings.button_text }}
           </a>
       {% endcase %}
@@ -54,49 +54,49 @@
       },
       {
         "type": "text",
-        "id": "video_text_container",
+        "id": "video_text_container_styles",
         "label": "Video Text Container",
         "default": "p-4 md:p-8 flex flex-col items-center justify-center md:flex-row"
       },
       {
         "type": "text",
-        "id": "video_container",
+        "id": "video_container_styles",
         "label": "Video Container",
         "default": "w-full md:w-1/2 md:order-1"
       },
       {
         "type": "text",
-        "id": "video_container_video",
+        "id": "video_container_video_styles",
         "label": "Video",
         "default": "w-full h-full rounded-lg"
       },
       {
         "type": "text",
-        "id": "text_container",
+        "id": "text_container_styles",
         "label": "Text Container",
         "default": "w-full text-center md:w-1/2 md:order-2 p-4 md:p-8 py-10"
       },
       {
         "type": "text",
-        "id": "text_container_heading",
+        "id": "text_container_heading_styles",
         "label": "Heading",
         "default": "text-2xl md:text-4xl font-bold mb-4"
       },
       {
         "type": "text",
-        "id": "text_container_sub_heading",
+        "id": "text_container_sub_heading_styles",
         "label": "Sub Heading",
         "default": "text-lg md:text-3xl text-gray-700 mb-4"
       },
       {
         "type": "text",
-        "id": "text_container_paragraph",
+        "id": "text_container_paragraph_styles",
         "label": "Paragraph",
         "default": "text-base md:text-lg text-gray-700 mb-4"
       },
       {
         "type": "text",
-        "id": "text_container_button",
+        "id": "text_container_button_styles",
         "label": "Button",
         "default": "md:text-lg py-2 px-5 rounded-full border-2 border-slate-400 inline-block"
       }
