--- a/sections/dev__featured-collection.liquid
+++ b/sections/dev__featured-collection.liquid
@@ -1,16 +1,25 @@
 <div class="featured-collection {{ section.settings.featured-collection }}">
   <div class="featured-collection__centered-content {{ section.settings.featured-collection__centered-content }}">
-    <div class="featured-collection__feature-headers {{ section.settings.featured-collection__feature-headers }}">{{ section.settings.heading }}</div>
-
-    <div class="featured-collection__view-all-link-section {{ section.settings.featured-collection__view-all-link-section }}">
-      <a href="{{ section.settings.linkUrl }}">View all products ➜</a>
+    <div class="featured-collection__feature-headers {{ section.settings.featured-collection__feature-headers }}">
+      {{ section.settings.heading }}
     </div>
+
+    <a 
+      href="{{ section.settings.linkUrl }}" 
+      class="featured-collection__view-all-link-section {{ section.settings.featured-collection__view-all-link-section }}"
+    >
+      {{ section.settings.all_product_heading }}
+    </a>
 
     <div class="featured-collection__tabsCSS {{ section.settings.featured-collection__tabsCSS }}">
       {% assign tags = section.settings.tags | split: ',' %}
       {% for tag in tags %}
         {% assign formattedTag = tag | replace: '_', ' ' | capitalize %}
-        <a href="#" class="featured-collection__tab-link {{ section.settings.featured-collection__tab-link }}" data-category="{{ formattedTag | handle }}">
+        <a
+          href="#"
+          class="featured-collection__tab-link {{ section.settings.featured-collection__tab-link }}"
+          data-category="{{ formattedTag | handle }}"
+        >
           {{- formattedTag -}}
         </a>
       {% endfor %}
@@ -20,7 +29,7 @@
   <div class="featured-collection__product-container {{ section.settings.featured-collection__product-container }}">
     {% for block in section.blocks %}
       <div
-        class="featured-collection__product-card {{ block.settings.featured-collection__product-card }}" 
+        class="featured-collection__product-card {{ block.settings.featured-collection__product-card }}"
         {{ block.shopify_attributes }}
         data-category="{{ block.settings.category | handle }}"
       >
@@ -34,14 +43,28 @@
               {{ 'image' | placeholder_svg_tag }}
             {% endif %}
           </div>
-          <div class="featured-collection__deal-tag {{ block.settings.featured-collection__deal-tag }}">DEAL - {{ block.settings.deal }}</div>
+          <div class="featured-collection__deal-tag {{ block.settings.featured-collection__deal-tag }}">
+            {{ block.settings.deal_heading }} {{ block.settings.deal }}
+          </div>
         </div>
-        <p class="featured-collection__category {{ block.settings.featured-collection__category }}" id="categoryCSS">{{ block.settings.category }}</p>
-        <h3 class="featured-collection__title {{ block.settings.featured-collection__title }}">{{ block.settings.title }}</h3>
-        <p class="featured-collection__description {{ block.settings.featured-collection__description }}">{{ block.settings.description }}</p>
+        <p class="featured-collection__category {{ block.settings.featured-collection__category }}" id="categoryCSS">
+          {{ block.settings.category }}
+        </p>
+        <h3 class="featured-collection__title {{ block.settings.featured-collection__title }}">
+          {{ block.settings.title }}
+        </h3>
+        <p class="featured-collection__description {{ block.settings.featured-collection__description }}">
+          {{ block.settings.description }}
+        </p>
         <p class="featured-collection__price {{ block.settings.featured-collection__price }}">
-          {{ section.settings.product_currency }} {{ block.settings.price }}
-          <span class="featured-collection__strikePrice {{ block.settings.featured-collection__strikePrice }}"><s>{{ section.settings.product_currency }} {{ block.settings.strikeThroughPrice }}</s></span>
+          {{ section.settings.product_currency }}
+          {{ block.settings.price }}
+          <span class="featured-collection__strikePrice {{ block.settings.featured-collection__strikePrice }}">
+            <s>
+              {{ section.settings.product_currency }}
+              {{ block.settings.strikeThroughPrice }}
+            </s>
+          </span>
         </p>
       </div>
     {% endfor %}
@@ -88,6 +111,12 @@
       "label": "Heading",
       "id": "heading",
       "default": "OUR PRODUCTS"
+    },
+    {
+      "type": "text",
+      "label": "View All Product Heading",
+      "id": "all_product_heading",
+      "default": "View all products ➜"
     },
     {
       "type": "url",
@@ -187,6 +216,12 @@
           "type": "image_picker",
           "id": "image",
           "label": "Image"
+        },
+        {
+          "type": "text",
+          "id": "deal_heading",
+          "label": "Deal Heading",
+          "default": "DEAL"
         },
         {
           "type": "text",
