Column Image height Fixed

--- a/sections/dev__multi-column.liquid
+++ b/sections/dev__multi-column.liquid
@@ -9,7 +9,7 @@
     {% for block in section.blocks %}
       <div class="multi-column__item {{ section.settings.multi-column__item }}">
         {% if block.settings.image %}
-          <div class="multi-column__item-img-container {{ section.settings.multi-column__item-img-container }}">
+          <div class="multi-column__item-img {{ section.settings.multi-column__item-img }}">
             {{ block.settings.image | image_url: width: 200 | image_tag: alt: 'alt_text',
                 class: section.settings.multi-column__style--item-img }}
           </div>
