--- a/sections/dev__featured-collection.liquid
+++ b/sections/dev__featured-collection.liquid
@@ -143,7 +143,7 @@
       "type": "textarea",
       "id": "featured-collection",
       "label": "Collection Style",
-      "default": "w-90 mx-auto p-20 md:my-5 md:p-5"
+      "default": "w-90 mx-auto p-20 md:my-5 max-md:p-5"
     },
     {
       "type": "textarea",
@@ -179,7 +179,7 @@
       "type": "textarea",
       "id": "featured-collection__product-container",
       "label": "Product Container Style",
-      "default": "flex overflow-x-auto flex-nowrap justify-start items-stretch mx-auto my-0 pb-[30px]"
+      "default": "flex overflow-x-auto flex-nowrap justify-start items-stretch mx-auto my-0 pb-[30px] [&::-webkit-scrollbar]:h-1 [&::-webkit-scrollbar-track]:bg-gray-300 [&::-webkit-scrollbar-thumb]:bg-gray-700 [&::-webkit-scrollbar-thumb:hover]:bg-gray-900"
     }
   ],
   "blocks": [
